fixed app store button visibility in mobile

--- a/style.css
+++ b/style.css
@@ -301,10 +301,6 @@ ar-button:before {
 #appQRIcon { display: none; }
 #appButton { display: initial; }
 
-#appButton {
-  visibility: hidden;
-}
-
 /* computer */
 @media only screen and (min-width: 650px) {
   /* AR */
